# Naradbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  STATUS.md  blaxel.toml  hn_workflow.mmd  pyproject.toml
data/: personal_agent.db  test_app.db
deploy/blaxel/: agent.blaxel.toml.example  job.blaxel.toml.example
deploy/blaxel/templates/computer-use/: Dockerfile  blaxel.toml
docs/: blaxel.md  pi-automation.md
src/personal_agent/: __init__.py  app.py  asgi.py  container.py  logging.py
src/personal_agent/agent/: __init__.py  models.py  service.py
src/personal_agent/automation/: computer_use.py  job_apply.py  models.py  pi_agent.py
src/personal_agent/config/: __init__.py  settings.py
src/personal_agent/discord/: __init__.py  bot.py  messages.py  webhooks.py
src/personal_agent/execution/: __init__.py  blaxel.py
src/personal_agent/graph/: __init__.py  main.py  state.py
src/personal_agent/hn/: __init__.py  categorizer.py  client.py  fetcher.py  formatters.py  link_fetcher.py  models.py  opportunity_embeddings.py  publisher.py  rollups.py  scorer.py  service.py  story_analysis.py  summarizer.py  summary_providers.py
src/personal_agent/jobs/: hn_digest.py
src/personal_agent/scheduler/: __init__.py  jobs.py
src/personal_agent/storage/: __init__.py  db.py  repositories.py
tests/: test_agent_orchestrator.py  test_app.py  test_discord_bot.py  test_hn_formatters.py  test_hn_rollups.py  test_hn_scoring.py  test_hn_service.py  test_opportunity_embeddings.py  test_pi_agent.py  test_settings.py  test_summary_provider.py
(+6 files in other folders)
